# api/rest/controller/charge_points.go
@@ -26,11 +26,17 @@ func NewChargePointsAPI(cS *chargepoint.Service) *ChargePointsAPI {
 // @Tags Charge Points
 // @Accept json
 // @Produce json
-// @Param Body body rpc.CreateChargePointReq true "Post CreateChargePointReq body"
+// @Security ApiKeyAuth
+// @Param Body body rpc.CreateChargePointReqPublic true "Post CreateChargePointReq body"
 // @Success 200 {object} rpc.CreateChargePointResp
 // @Router /v2/ocpp/charge_points [post]
 func (api *ChargePointsAPI) CreateChargePoint(c *gin.Context) {
-	req := &rpc.CreateChargePointReq{}
+	ctx := context.Background()
+	ctx = context.WithValue(ctx, constants.CtxKey("gin"), c)
+
+	applicationId := c.GetString("application_id")
+
+	req := &rpc.CreateChargePointReqPublic{}
 	err := c.ShouldBindJSON(&req)
 	if err != nil {
 		c.Error(err).SetType(gin.ErrorTypeBind)
@@ -42,10 +48,12 @@ func (api *ChargePointsAPI) CreateChargePoint(c *gin.Context) {
 		return
 	}
 
-	ctx := context.Background()
-	ctx = context.WithValue(ctx, constants.CtxKey("gin"), c)
-
-	res, err := api.chargepointService.CreateChargePoint(ctx, req)
+	res, err := api.chargepointService.CreateChargePoint(ctx, &rpc.CreateChargePointReq{
+		ApplicationId:         applicationId,
+		ChargePointIdentifier: req.ChargePointIdentifier,
+		EntityCode:            req.EntityCode,
+		OcppProtocol:          req.OcppProtocol,
+	})
 
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
@@ -68,11 +76,17 @@ func (api *ChargePointsAPI) CreateChargePoint(c *gin.Context) {
 // @Tags Charge Points
 // @Accept json
 // @Produce json
-// @Param Body body rpc.CreateChargePointIdTagReq true "Post CreateChargePointIdTagReq body"
+// @Security ApiKeyAuth
+// @Param Body body rpc.CreateChargePointIdTagReqPublic true "Post CreateChargePointIdTagReq body"
 // @Success 200 {object} rpc.CreateChargePointIdTagReq
 // @Router /v2/ocpp/charge_points/id_tags [post]
 func (api *ChargePointsAPI) CreateChargePointIdTag(c *gin.Context) {
-	req := &rpc.CreateChargePointIdTagReq{}
+	ctx := context.Background()
+	ctx = context.WithValue(ctx, constants.CtxKey("gin"), c)
+
+	applicationId := c.GetString("application_id")
+
+	req := &rpc.CreateChargePointIdTagReqPublic{}
 	err := c.ShouldBindJSON(&req)
 	if err != nil {
 		c.Error(err).SetType(gin.ErrorTypeBind)
@@ -84,10 +98,11 @@ func (api *ChargePointsAPI) CreateChargePointIdTag(c *gin.Context) {
 		return
 	}
 
-	ctx := context.Background()
-	ctx = context.WithValue(ctx, constants.CtxKey("gin"), c)
-
-	res, err := api.chargepointService.CreateChargePointIdTag(ctx, req)
+	res, err := api.chargepointService.CreateChargePointIdTag(ctx, &rpc.CreateChargePointIdTagReq{
+		ApplicationId:         applicationId,
+		ChargePointIdentifier: req.ChargePointIdentifier,
+		IdTag:                 req.IdTag,
+	})
 
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
