# api/rest/controller/operations.go
@@ -29,11 +29,17 @@ func NewOperationsAPI(oS *operation.Service, snS *statusnotification.Service) *O
 // @Tags Operations
 // @Accept json
 // @Produce json
-// @Param Body body rpc.RemoteStartTransactionReq true "Post RemoteStartTransactionReq body"
+// @Security ApiKeyAuth
+// @Param Body body rpc.RemoteStartTransactionReqPublic true "Post RemoteStartTransactionReq body"
 // @Success 200 {object} rpc.RemoteStartTransactionResp
 // @Router /v2/ocpp/operations/remote-start-transaction [post]
 func (api *OperationsAPI) RemoteStartTransaction(c *gin.Context) {
-	var req = &rpc.RemoteStartTransactionReq{}
+	ctx := context.Background()
+	ctx = context.WithValue(ctx, constants.CtxKey("gin"), c)
+
+	applicationId := c.GetString("application_id")
+
+	req := &rpc.RemoteStartTransactionReqPublic{}
 	err := c.ShouldBindJSON(&req)
 	if err != nil {
 		c.Error(err).SetType(gin.ErrorTypeBind)
@@ -45,9 +51,11 @@ func (api *OperationsAPI) RemoteStartTransaction(c *gin.Context) {
 		return
 	}
 
-	ctx := context.Background()
-	ctx = context.WithValue(ctx, constants.CtxKey("gin"), c)
-	res, err := api.operationService.RemoteStartTransaction(ctx, req)
+	res, err := api.operationService.RemoteStartTransaction(ctx, &rpc.RemoteStartTransactionReq{
+		ApplicationId:         applicationId,
+		ChargePointIdentifier: req.ChargePointIdentifier,
+		ConnectorId:           req.ConnectorId,
+	})
 
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
@@ -70,11 +78,17 @@ func (api *OperationsAPI) RemoteStartTransaction(c *gin.Context) {
 // @Tags Operations
 // @Accept json
 // @Produce json
-// @Param Body body rpc.RemoteStopTransactionReq true "Post RemoteStopTransactionReq body"
+// @Security ApiKeyAuth
+// @Param Body body rpc.RemoteStopTransactionReqPublic true "Post RemoteStopTransactionReq body"
 // @Success 200 {object} rpc.RemoteStopTransactionResp
 // @Router /v2/ocpp/operations/remote-stop-transaction [post]
 func (api *OperationsAPI) RemoteStopTransaction(c *gin.Context) {
-	var req = &rpc.RemoteStopTransactionReq{}
+	ctx := context.Background()
+	ctx = context.WithValue(ctx, constants.CtxKey("gin"), c)
+
+	applicationId := c.GetString("application_id")
+
+	req := &rpc.RemoteStopTransactionReqPublic{}
 	err := c.ShouldBindJSON(&req)
 	if err != nil {
 		c.Error(err).SetType(gin.ErrorTypeBind)
@@ -86,9 +100,11 @@ func (api *OperationsAPI) RemoteStopTransaction(c *gin.Context) {
 		return
 	}
 
-	ctx := context.Background()
-	ctx = context.WithValue(ctx, constants.CtxKey("gin"), c)
-	res, err := api.operationService.RemoteStopTransaction(ctx, req)
+	res, err := api.operationService.RemoteStopTransaction(ctx, &rpc.RemoteStopTransactionReq{
+		ApplicationId:         applicationId,
+		ChargePointIdentifier: req.ChargePointIdentifier,
+		ConnectorId:           req.ConnectorId,
+	})
 
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
@@ -111,11 +127,17 @@ func (api *OperationsAPI) RemoteStopTransaction(c *gin.Context) {
 // @Tags Operations
 // @Accept json
 // @Produce json
-// @Param Body body rpc.GetLatestStatusNotificationsReq true "Post GetLatestStatus body"
+// @Security ApiKeyAuth
+// @Param Body body rpc.GetLatestStatusNotificationsReqPublic true "Post GetLatestStatus body"
 // @Success 200 {object} rpc.GetLatestStatusNotificationsResp
 // @Router /v2/ocpp/operations/get-latest-status [post]
 func (api *OperationsAPI) GetLatestStatus(c *gin.Context) {
-	var req = &rpc.GetLatestStatusNotificationsReq{}
+	ctx := context.Background()
+	ctx = context.WithValue(ctx, constants.CtxKey("gin"), c)
+
+	applicationId := c.GetString("application_id")
+
+	req := &rpc.GetLatestStatusNotificationsReqPublic{}
 	err := c.ShouldBindJSON(&req)
 	if err != nil {
 		c.Error(err).SetType(gin.ErrorTypeBind)
@@ -127,9 +149,10 @@ func (api *OperationsAPI) GetLatestStatus(c *gin.Context) {
 		return
 	}
 
-	ctx := context.Background()
-	ctx = context.WithValue(ctx, constants.CtxKey("gin"), c)
-	res, err := api.statusnotificationService.GetLatestStatusNotifications(ctx, req)
+	res, err := api.statusnotificationService.GetLatestStatusNotifications(ctx, &rpc.GetLatestStatusNotificationsReq{
+		ApplicationId:         applicationId,
+		ChargePointIdentifier: req.ChargePointIdentifier,
+	})
 
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
